function(add_example)
    add_executable(example_${ARGV0} ${ARGV0}.cpp)
    target_link_libraries(example_${ARGV0} gtest)
endfunction()

add_example(tuple)
add_example(tuple1)
add_example(unique)
add_example(unique1)
add_example(unique2)
add_example(unique3)
add_example(thread)
add_example(thread1)
add_example(thread2)
add_example(thread3)
add_example(thread4)
add_example(thread5)
add_example(thread6)

add_example(function)
add_example(function1)

add_example(chrono)
